Cleaned/Updated some stuff